# OpenGL-Project-V2

./: CMakeLists.txt  LICENSE  README.md
include/: camera.hh  camera_dialog.hh  compute_shader.hh  config.hh  dialog.hh  fish.hh  frustum.hh  look_at.hh  mat4f.hh  object.hh  program.hh  scene.hh  triangle.hh  vec3f.hh
shaders/: compute_fish_movement.glsl  fish_fragment.glsl  fish_geometry.glsl  fish_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl
src/: camera.cc  camera.hh  camera_dialog.cc  compute_shader.cc  dialog.cc  fish.cc  frustum.cc  look_at.cc  main.cc  mat4f.cc  mat4f.hh  object.hh  program.cc  scene.cc  triangle.cc  vec3f.cc  vec3f.hh
